test/errors/expressions_error/zs/index_operator/constant_expression_error.zs
package index_operator.constant_expression_error;

const int32 Constant = 2 * @index;
